// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`md-replacer Inline 1`] = `"<!-- start: foo -->foo<!-- end: foo -->"`;

exports[`md-replacer Mixed 1`] = `
"
before
<!-- start: foo -->
foo
<!-- end: foo -->between<!-- start: bar -->bar<!-- end: bar -->after"
`;

exports[`md-replacer Multiline 1`] = `
"
<!-- start: foo -->
foo
<!-- end: foo -->"
`;

exports[`md-replacer replace 1`] = `
"
before
  <!-- start: foo -->
  foo
  <!-- end: foo -->
ebd"
`;
